--- a/index.html
+++ b/index.html
@@ -59,17 +59,46 @@
           <p style="font-style: oblique;">Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
     </div>
 
-    <div class="page-down1">
+    <div class="footer">
+      <div class="page-down1">
         <h5 style="font-size: larger;">FOOTER</h5>
         <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla</p>
     </div>
     <div class="page-down2">
         <h5 style="font-size: larger;">BLOG-POSTS</h5>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla</p>
+        <div class="blog-img1">
+          <img src="https://www.w3schools.com/w3images/workshop.jpg" alt="" class="bg">
+          <div class="img-side-txt">
+            <h3>Lorem</h3>
+            <p>sed mattis nunc</p>
+          </div>
+        </div>
+        <div class="blog-img2">
+          <img src="https://www.w3schools.com/w3images/gondol.jpg" alt="" class="bg">
+          <div class="img-side-txt">
+            <h3>Ipsum</h3>
+            <p>Praes tinci sed</p>
+          </div>
+        </div>
+
     </div>
     <div class="page-down3">
         <h5 style="font-size: larger;"> POPULAR TAGS </h5>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla</p>
+        <div class="span-tag">
+          <span class="tag color">Travel</span>
+          <span class="tag">New York</span>
+          <span class="tag">Dinner</span>
+          <span class="tag">Salmon</span>
+          <span class="tag">France</span>
+          <span class="tag">Drinks</span>
+          <span class="tag">Ideas</span>
+          <span class="tag">Flavors</span>
+          <span class="tag">Cuisine</span>
+          <span class="tag">Chicken</span>
+          <span class="tag">Dressing</span>
+          <span class="tag">Fried</span>
+        </div>
+    </div>
     </div>
     
 </body>
